Fix button style on iOS

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -87,6 +87,7 @@ body {
     }
 
     input.button {
+      -webkit-appearance: none;
       margin: 0;
       width: 100%;
       margin: 0;
